# Austro

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: pages.yml
docs/: index.html
src/: main.rs
src/api/: routes.rs  types.rs
src/models/: block.rs  blockchain.rs  difficulty.rs  genesis.rs  history.rs  mempool.rs  mod.rs  storage.rs  transaction.rs  wallet.rs  wallet_store.rs
src/network/: behaviour.rs  mod.rs  node.rs  sync.rs
